--- a/index.html
+++ b/index.html
@@ -114,8 +114,21 @@
                     <!-- end tabs -->
                 </div>
                 <!-- end tab navigation -->
-                <div class="d-flex justify-content-center mb-2">
-                    <img class="d-none" src="assets/icons/loader.gif" width="40px" height="40px" id="loader" data-bs-toggle="tooltip" data-bs-placement="right" title="Loader, this loader shows up whenever an process is still running">
+                <div class="mb-2">
+                    <div class="form-check form-switch d-flex justify-content-center">
+                        <input class="form-check-input"
+                               type="checkbox"
+                               role="switch"
+                               id="persist-data-checkbox"
+                               data-bs-toggle="tooltip" data-bs-placement="right" title="Persist data on this plugin">
+                    </div>
+
+                    <div class="d-flex justify-content-center">
+                        <img class="d-none" src="assets/icons/loader.gif" width="40px" height="40px" id="loader"
+                             data-bs-toggle="tooltip" data-bs-placement="right"
+                             title="Loader, this loader shows up whenever an process is still running">
+                    </div>
+
                 </div>
             </div>
 
@@ -463,8 +476,14 @@
                                         </button>
                                     </div>
                                     <div class="d-flex justify-content-between mt-1">
-                                        <button class="btn btn-outline-primary w-50 me-1" id="enum-tooling-spider-simplified-view" value="simplified" >View simple tree</button>
-                                        <button class="btn btn-outline-primary w-50" id="enum-tooling-spider-detailed-view">View tree & forms</button>
+                                        <button class="btn btn-outline-primary w-50 me-1"
+                                                id="enum-tooling-spider-simplified-view" value="simplified">View simple
+                                            tree
+                                        </button>
+                                        <button class="btn btn-outline-primary w-50"
+                                                id="enum-tooling-spider-detailed-view">
+                                            View tree & forms
+                                        </button>
                                     </div>
                                 </div>
 
@@ -579,8 +598,25 @@
                                     </div>
 
                                     <div class="form-group w-100 d-flex justify-content-between">
-                                        <input class="form-control w-100" type="text" id="enum-tooling-iframe-url-input"
-                                               placeholder="https://www.example.com">
+                                        <div class="form-group w-100">
+                                            <!-- start textarea and copybutton-->
+                                            <div class="position-relative d-flex w-100">
+                                                <textarea
+                                                        id="enum-tooling-iframe-url-input"
+                                                        class="form-control"
+                                                        placeholder="https://www.example.com"
+                                                        rows="1"
+                                                        style="width: 100%; padding-right: 40px;"></textarea>
+                                                <a href="#">
+                                                    <img class="copy-icon"
+                                                         src="assets/icons/general/copy.png"
+                                                         style="position: absolute; bottom: 5px; right: 5px;"
+                                                         height="25px"
+                                                         width="25px"
+                                                         alt="Copy">
+                                                </a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
 
