--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-<div class="container-custom">
+<div class="container-custom" style="overflow-x: hidden">
     <div class="row h-100">
         <div class="d-flex">
 
@@ -122,7 +122,6 @@
                                id="persist-data-checkbox"
                                data-bs-toggle="tooltip" data-bs-placement="right" title="Persist data on this plugin">
                     </div>
-
                     <div class="d-flex justify-content-center">
                         <img class="d-none" src="assets/icons/loader.gif" width="40px" height="40px" id="loader"
                              data-bs-toggle="tooltip" data-bs-placement="right"
@@ -477,11 +476,12 @@
                                     </div>
                                     <div class="d-flex justify-content-between mt-1">
                                         <button class="btn btn-outline-primary w-50 me-1"
-                                                id="enum-tooling-spider-simplified-view" value="simplified">View simple
+                                                id="enum-tooling-spider-simplified-view" value="{}">View simple
                                             tree
                                         </button>
                                         <button class="btn btn-outline-primary w-50"
-                                                id="enum-tooling-spider-detailed-view">
+                                                id="enum-tooling-spider-detailed-view"
+                                                value="{}">
                                             View tree & forms
                                         </button>
                                     </div>
