updated image names

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                            data-bs-placement="top" title="Tooltip on top">
                             <img id="tab-1-img" data-bs-toggle="tooltip"
                                  data-bs-placement="top" title="General tooling"
-                                 src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">
+                                 src="assets/icons/navbar/tab-1-gen-tooling.png" width="25px" height="25px;">
                         </a>
                     </div>
                     <!-- tab 2 - enum tools -->
@@ -54,7 +54,7 @@
                            data-bs-toggle="tab">
                             <img id="tab-2-img" data-bs-toggle="tooltip"
                                  data-bs-placement="top" title="Enumeration tooling"
-                                 src="assets/icons/navbar/enum-tools-tab-2.png" width="25px" height="25px;">
+                                 src="assets/icons/navbar/tab-2-enum-tools.png" width="25px" height="25px;">
                         </a>
                     </div>
                     <!-- tab 3 - exploit assistant -->
@@ -63,7 +63,7 @@
                            data-bs-toggle="tab">
                             <img id="tab-3-img" data-bs-toggle="tooltip"
                                  data-bs-placement="top" title="Exploit assistant"
-                                 src="assets/icons/navbar/exploit-assistant-tab-3.png" width="25px" height="25px;">
+                                 src="assets/icons/navbar/tab-3-exploit-assistant.png" width="25px" height="25px;">
                         </a>
                     </div>
                     <!-- tab 4 - shell assistant -->
@@ -72,7 +72,7 @@
                            data-bs-toggle="tab">
                             <img id="tab-4-img" data-bs-toggle="tooltip"
                                  data-bs-placement="top" title="Shell assistant"
-                                 src="assets/icons/navbar/shell-assistant-tab-4.png" width="25px" height="25px;">
+                                 src="assets/icons/navbar/tab-4-shell-assistant.png" width="25px" height="25px;">
                         </a>
                     </div>
                     <!-- tab 5 - checklist assistant -->
@@ -81,37 +81,34 @@
                            data-bs-toggle="tab">
                             <img id="tab-5-img" data-bs-toggle="tooltip"
                                  data-bs-placement="top" title="Checklist assistant"
-                                 src="assets/icons/navbar/checklist-assistant-tab-5.png" width="28px" height="28px">
+                                 src="assets/icons/navbar/tab-5-checklist-assistant.png" width="28px" height="28px">
                         </a>
                     </div>
-                    <!-- tab 6 - handy commands -->
+                    <!-- tab 6 - useful commands -->
                     <div class="mb-2 text-center w-100">
                         <a href="#tab6" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center"
                            data-bs-toggle="tab">
                             <img id="tab-6-img" data-bs-toggle="tooltip"
-                                 data-bs-placement="top" title="Usefull commands"
-                                 src="assets/icons/navbar/usefull-commands-tab-6.png" width="26px" height="26px;">
+                                 data-bs-placement="top" title="Useful commands"
+                                 src="assets/icons/navbar/tab-6-useful-commands.png" width="26px" height="26px;">
                         </a>
                     </div>
-                    <!-- tab 7 - todo-->
-                    <!--                    <div class="mb-2 text-center w-100">-->
-                    <!--                        <a href="#tab7" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center"-->
-                    <!--                           data-bs-toggle="tab">-->
-                    <!--                            <img id="tab-7-img" data-bs-toggle="tooltip"-->
-                    <!--                                 data-bs-placement="top" title="Checklist assistant"-->
-                    <!--                                 src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">-->
-                    <!--                        </a>-->
-                    <!--                    </div>-->
-                    <!-- tab 8 - todo -->
-                    <!--                    <div class="mb-2 text-center w-100">-->
-                    <!--                        <a href="#tab8" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center"-->
-                    <!--                           data-bs-toggle="tab">-->
-                    <!--                            <img id="tab-8-img" data-bs-toggle="tooltip"-->
-                    <!--                                 data-bs-placement="top" title="Checklist assistant"-->
-                    <!--                                 src="assets/icons/navbar/tools-tab-1.png" width="25px" height="25px;">-->
-                    <!--                        </a>-->
-                    <!--                    </div>-->
-                    <!-- end tabs -->
+<!--                    <div class="mb-2 text-center w-100">-->
+<!--                        <a href="#tab7" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center"-->
+<!--                           data-bs-toggle="tab">-->
+<!--                            <img id="tab-7-img" data-bs-toggle="tooltip"-->
+<!--                                 data-bs-placement="top" title="Checklist assistant"-->
+<!--                                 src="assets/icons/navbar/tab-1-gen-tooling.png" width="25px" height="25px;">-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                    <div class="mb-2 text-center w-100">-->
+<!--                        <a href="#tab8" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center"-->
+<!--                           data-bs-toggle="tab">-->
+<!--                            <img id="tab-8-img" data-bs-toggle="tooltip"-->
+<!--                                 data-bs-placement="top" title="Checklist assistant"-->
+<!--                                 src="assets/icons/navbar/tab-1-gen-tooling.png" width="25px" height="25px;">-->
+<!--                        </a>-->
+<!--                    </div>-->
                 </div>
                 <!-- end tab navigation -->
                 <div class="mb-2">
