--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="assets/js/libs/crypto.min.js"></script>
     <script src="assets/js/libs/bcrypt.min.js"></script>
     <style>
-
         .nav-link.active-link {
             color: #0056b3 !important; /* Custom color for active links */
             background-color: transparent !important;
@@ -93,24 +92,25 @@
                                  src="assets/icons/navbar/tab-6-useful-commands.png" width="26px" height="26px;">
                         </a>
                     </div>
-<!--                    <div class="mb-2 text-center w-100">-->
-<!--                        <a href="#tab7" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center"-->
-<!--                           data-bs-toggle="tab">-->
-<!--                            <img id="tab-7-img" data-bs-toggle="tooltip"-->
-<!--                                 data-bs-placement="top" title="Checklist assistant"-->
-<!--                                 src="assets/icons/navbar/tab-1-gen-tooling.png" width="25px" height="25px;">-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                    <div class="mb-2 text-center w-100">-->
-<!--                        <a href="#tab8" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center"-->
-<!--                           data-bs-toggle="tab">-->
-<!--                            <img id="tab-8-img" data-bs-toggle="tooltip"-->
-<!--                                 data-bs-placement="top" title="Checklist assistant"-->
-<!--                                 src="assets/icons/navbar/tab-1-gen-tooling.png" width="25px" height="25px;">-->
-<!--                        </a>-->
-<!--                    </div>-->
+                    <!--                    <div class="mb-2 text-center w-100">-->
+                    <!--                        <a href="#tab7" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center"-->
+                    <!--                           data-bs-toggle="tab">-->
+                    <!--                            <img id="tab-7-img" data-bs-toggle="tooltip"-->
+                    <!--                                 data-bs-placement="top" title="Checklist assistant"-->
+                    <!--                                 src="assets/icons/navbar/tab-1-gen-tooling.png" width="25px" height="25px;">-->
+                    <!--                        </a>-->
+                    <!--                    </div>-->
+                    <!--                    <div class="mb-2 text-center w-100">-->
+                    <!--                        <a href="#tab8" class="nav-link text-custom-dark-blue w-100 d-flex justify-content-center"-->
+                    <!--                           data-bs-toggle="tab">-->
+                    <!--                            <img id="tab-8-img" data-bs-toggle="tooltip"-->
+                    <!--                                 data-bs-placement="top" title="Checklist assistant"-->
+                    <!--                                 src="assets/icons/navbar/tab-1-gen-tooling.png" width="25px" height="25px;">-->
+                    <!--                        </a>-->
+                    <!--                    </div>-->
                 </div>
                 <!-- end tab navigation -->
+
                 <div class="mb-2">
                     <div class="form-check form-switch d-flex justify-content-center">
                         <input class="form-check-input"
@@ -126,14 +126,16 @@
                     </div>
 
                 </div>
-            </div>
 
+            </div>
             <!-- end navbar -->
+
             <div class="col-11 p-2 tab-content rounded border h-100 border border-dark" style="overflow-y: scroll;">
 
-                <!-- tab 1 (tooling) start-->
+                <!-- tab 1 (tooling) START-->
                 <div class="tab-pane fade" id="tab1">
-                    <!-- Nested tabs for Tools -->
+
+                    <!-- Nested tabs for Tools START -->
                     <ul class="nav nav-tabs" id="toolsTab" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" id="encode_decode-tab" data-bs-toggle="tab"
@@ -164,7 +166,9 @@
                             </a>
                         </li>
                     </ul>
-                    <!-- tab 1 content start -->
+                    <!-- Nested tabs for Tools END -->
+
+                    <!-- tab 1 content START -->
                     <div class="tab-content" id="toolsTabContent">
 
                         <!-- Encoding/ decoding tab START -->
@@ -230,6 +234,7 @@
                             </div>
                         </div>
                         <!-- Encoding/ decoding tab END -->
+
                         <!-- Hashing tab START -->
                         <div class="tab-pane fade"
                              id="hashing"
@@ -356,6 +361,7 @@
                             </div>
                         </div>
                         <!-- Hashing tab END -->
+
                         <!-- Formatter tab START -->
                         <div class="tab-pane fade"
                              id="formatter"
@@ -392,21 +398,19 @@
                             </div>
                         </div>
                         <!-- Formatter tab END -->
-
                     </div>
-                    <!-- tab 1 content end -->
-
+                    <!-- tab 1 content END -->
                 </div>
-                <!-- tab 1 (tooling) end -->
+                <!-- tab 1 (tooling) END -->
 
-                <!-- tab 2 (Enum tooling) start -->
+                <!-- tab 2 (Enum tooling) START -->
                 <div class="tab-pane fade" id="tab2">
-                    <!-- Nested tabs for Enum 2 -->
-                    <ul class="nav nav-tabs" id="enum-tools-tab" role="tablist">
+                    <!-- Nested tabs for Enum 2 START -->
+                    <ul class="nav nav-tabs" id="enum-tooling-tab" role="tablist">
 
                         <li class="nav-item">
-                            <a class="nav-link active" id="enum-tools-spider-nav-item" data-bs-toggle="tab"
-                               href="#enum-tools-spider" role="tab">
+                            <a class="nav-link active" id="enum-tooling-spider-nav-item" data-bs-toggle="tab"
+                               href="#enum-tooling-spider" role="tab">
                                 <img data-bs-toggle="tooltip"
                                      data-bs-placement="right" title="Website spider"
                                      src="assets/icons/navbar/tab-2-enum-tooling/spider.png"
@@ -415,8 +419,8 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" id="enum-tools-toolbox-nav-item" data-bs-toggle="tab"
-                               href="#enum-tools-toolbox" role="tab">
+                            <a class="nav-link" id="enum-tooling-toolbox-nav-item" data-bs-toggle="tab"
+                               href="#enum-tooling-toolbox" role="tab">
                                 <img data-bs-toggle="tooltip"
                                      data-bs-placement="right" title="Enumeration toolbox"
                                      src="assets/icons/navbar/tab-2-enum-tooling/toolbox.png"
@@ -435,18 +439,8 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" id="enum-tooling-csrf-checker-nav-item" data-bs-toggle="tab"
-                               href="#enum-tooling-csrf-checker" role="tab">
-                                <img data-bs-toggle="tooltip"
-                                     data-bs-placement="right" title="CSRF checker"
-                                     src="assets/icons/navbar/tab-2-enum-tooling/csrf.png"
-                                     width="25px" height="25px">
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" id="enum-tools-message-listener-nav-item" data-bs-toggle="tab"
-                               href="#enum-tools-message-listener" role="tab">
+                            <a class="nav-link" id="enum-tooling-message-listener-nav-item" data-bs-toggle="tab"
+                               href="#enum-tooling-message-listener" role="tab">
                                 <img data-bs-toggle="tooltip"
                                      data-bs-placement="right" title="Message listener"
                                      src="assets/icons/navbar/tab-2-enum-tooling/message-listener.png"
@@ -454,10 +448,12 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="tab-content" id="enum-tools-tab-content">
+                    <!-- Nested tabs for Enum 2 END -->
+                    <!-- tab content START -->
+                    <div class="tab-content" id="enum-tooling-tab-content">
 
-                        <!-- tab 1 - spider start -->
-                        <div class="tab-pane fade show active" id="enum-tools-spider" role="tabpanel"
+                        <!-- tab 1 - spider START -->
+                        <div class="tab-pane fade show active" id="enum-tooling-spider" role="tabpanel"
                              style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
                                 <div class="mt-2 mb-2">
@@ -507,10 +503,10 @@
 
                             </div>
                         </div>
-                        <!-- tab 1 - spider end -->
+                        <!-- tab 1 - spider END -->
 
-                        <!-- tab 2 - toolbox start -->
-                        <div class="tab-pane fade" id="enum-tools-toolbox" role="tabpanel"
+                        <!-- tab 2 - toolbox START -->
+                        <div class="tab-pane fade" id="enum-tooling-toolbox" role="tabpanel"
                              style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
                                 <div class="mt-2 mb-2">
@@ -571,10 +567,9 @@
 
                             </div>
                         </div>
-                        <!-- tab 2 - toolbox end -->
+                        <!-- tab 2 - toolbox END -->
 
-                        <!-- tab 3 - iframe checker start -->
-
+                        <!-- tab 3 - iframe checker START -->
                         <div class="tab-pane fade"
                              id="enum-tooling-iframe-checker"
                              role="tabpanel" style="height: 485px">
@@ -624,43 +619,13 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- tab 3 - iframe checker end -->
+                        <!-- tab 3 - iframe checker END -->
 
-                        <!-- tab 4 - csrf checker start -->
-                        <div class="tab-pane fade" id="enum-tooling-csrf-checker"
-                             role="tabpanel" style="height: 485px">
-                            <div class="d-flex flex-column justify-content-between h-100">
-                                <div class="mt-2 mb-2">
-                                    <h4 class="text-dark"> CSRF checker </h4>
-                                </div>
-
-                                <div>
-                                    <div class="d-flex justify-content-between w-100">
-                                        <button class="btn btn-outline-primary w-50 me-1"> Load forms</button>
-                                        <button class="btn btn-outline-primary w-50"> Generate form</button>
-                                    </div>
-                                    <div id="form-selector" class="d-flex justify-content-between flex-wrap">
-                                        <div class="form-group form-check">
-                                            <input type="radio" class="form-check-input" name="form-radio-checkout">
-                                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                                        </div>
-                                        <div class="form-group form-check">
-                                            <input type="radio" class="form-check-input" name="form-radio-checkout">
-                                            <label class="form-check-label">Check me out</label>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                            </div>
-                        </div>
-                        <!-- tab 4 - csrf checker end -->
-
-                        <!-- tab 5 - message listener start -->
-                        <div class="tab-pane fade" id="enum-tools-message-listener" role="tabpanel">
+                        <!-- tab 4 - message listener START -->
+                        <div class="tab-pane fade" id="enum-tooling-message-listener" role="tabpanel">
                             sup
                         </div>
-                        <!-- tab 5 - message listener end -->
+                        <!-- tab 4 - message listener end -->
                     </div>
 
 
@@ -669,24 +634,54 @@
 
                 <!-- tab 3 (Exploit assistant) start -->
                 <div class="tab-pane fade" id="tab3">
+
                     <!-- Nested tabs for Enum 3 -->
                     <ul class="nav nav-tabs" id="exploit-assistant-tab" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link text-custom-dark-blue" id="enum3-sub1-tab" data-bs-toggle="tab"
-                               href="#enum3-sub1" role="tab">Enum 3 Sub 1</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-custom-dark-blue" id="enum3-sub2-tab" data-bs-toggle="tab"
-                               href="#enum3-sub2" role="tab">Enum 3 Sub 2</a>
+                            <a class="nav-link" id="exploit-assistant-csrf-checker-nav-item" data-bs-toggle="tab"
+                               href="#exploit-assistant-csrf-checker" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right" title="CSRF assistant"
+                                     src="assets/icons/navbar/tab-3-exploit-assistant/csrf.png"
+                                     width="25px" height="25px">
+                            </a>
                         </li>
                     </ul>
-                    <div class="tab-content" id="exploit-assistant-tabContent">
-                        <div class="tab-pane fade" id="enum3-sub1" role="tabpanel">
-                            <h4>Enum 3 Sub 1 Content</h4>
+
+                    <div class="tab-content" id="exploit-assistant-tab-content">
+                        <!-- tab 1 - csrf checker START -->
+                        <div class="tab-pane fade" id="exploit-assistant-csrf-checker"
+                             role="tabpanel" style="height: 485px">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <div class="mt-2 mb-2">
+                                    <h4 class="text-dark"> CSRF assistant </h4>
+                                </div>
+
+                                <div>
+                                    <div class="d-flex justify-content-between w-100">
+                                        <button class="btn btn-outline-primary w-100 me-1" value="exploitAsssitantCSRFloadForms"
+                                                id="exploit-assistant-csrf-checker-load-form"> Load forms
+                                        </button>
+                                    </div>
+                                    <div id="exploit-assistant-csrf-checker-form-radio-button-container"
+                                         class="d-flex justify-content-between flex-wrap border rounded mt-1 mb-1 p-2"
+                                         style="min-height: 100px; max-height: 100px; overflow-y: scroll">
+
+
+                                    </div>
+                                </div>
+                                <div id="exploit-assistant-forms-container-outer-div" class="w-100">
+                                    <iframe id="exploit-assistant-csrf-checker-form-container" class="border rounded w-100"
+                                            style="min-height: 285px;">
+
+                                    </iframe>
+                                </div>
+
+                            </div>
                         </div>
-                        <div class="tab-pane fade" id="enum3-sub2" role="tabpanel">
-                            <h4>Enum 3 Sub 2 Content</h4>
-                        </div>
+                        <!-- tab 1 - csrf checker END -->
+
+
                     </div>
                 </div>
                 <!-- tab 3 (Exploit assistant) end -->
