--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="assets/css/libs/bootstrap.min.css" rel="stylesheet"/>
     <script src="assets/js/libs/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/libs/jquery.js"></script>
     <script src="assets/js/libs/crypto.min.js"></script>
     <script src="assets/js/libs/bcrypt.min.js"></script>
     <style>
@@ -623,7 +624,92 @@
 
                         <!-- tab 4 - message listener START -->
                         <div class="tab-pane fade" id="enum-tooling-message-listener" role="tabpanel">
-                            sup
+
+                            <!-- tab switcher Message listener START -->
+                            <ul class="nav nav-tabs" id="enum-tooling-message-listener-tab" role="tablist">
+
+                                <li class="nav-item">
+                                    <a class="btn" id="enum-tooling-postmessage-monitor-nav-item"
+                                       data-bs-toggle="tab" href="#enum-tooling-postmessage-monitor-tab" role="tab">
+                                        <div class="d-flex justify-content-between">
+                                            <img data-bs-toggle="tooltip"
+                                                 data-bs-placement="right" title="Postmessage monitor"
+                                                 src="assets/icons/navbar/tab-2-enum-tooling/subtab-4-message-listener/postmessage-monitor.png"
+                                                 width="25px" height="25px">
+                                            <div class="ms-1 text-dark" style="font-size: 10px;"
+                                                 id="enum-tooling-postmessage-monitor-count">
+                                                0
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="btn" id="enum-tooling-cookie-monitor-nav-item"
+                                       data-bs-toggle="tab" href="#enum-tooling-cookie-monitor-tab" role="tab">
+                                        <div class="d-flex justify-content-between">
+                                            <img data-bs-toggle="tooltip"
+                                                 data-bs-placement="right" title="Cookie monitor"
+                                                 src="assets/icons/navbar/tab-2-enum-tooling/subtab-4-message-listener/cookie-monitor.png"
+                                                 width="25px" height="25px">
+                                            <div class="ms-1 text-dark" style="font-size: 10px;"
+                                                 id="enum-tooling-cookie-monitor-count">
+                                                0
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                            <!-- tab switcher Message listener END -->
+
+                            <div class="tab-content">
+
+                                <div class="tab-pane fade show active mt-1" id="enum-tooling-postmessage-monitor-tab" style="height: 440px"
+                                     role="tabpanel">
+                                    <h6>
+                                        Postmessage monitor
+                                    </h6>
+                                    <div class="form-group d-flex justify-content-between">
+                                        <input class="form-control w-75 me-1" type="text" id="search-postmessage-input" placeholder="Search...">
+                                        <button class="refresh-control btn btn-outline-danger w-25" value="postmessage-monitor-table-table-body" data-control-refresh-active="true">Stop refresh</button>
+                                    </div>
+                                    <div>
+                                        <table id="postmessage-monitor-table" class="table table-responsive-sm table-hover table-striped">
+                                            <thead>
+                                                <th>Message</th>
+                                                <th>Timestamp</th>
+                                            </thead>
+                                            <tbody id="postmessage-monitor-table-table-body">
+
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+
+                                <div class="tab-pane fade mt-1" id="enum-tooling-cookie-monitor-tab"
+                                     role="tabpanel">
+                                    <h6>
+                                        Cookie monitor
+                                    </h6>
+
+                                    <div style="height: 410px; overflow-y:scroll">
+
+                                        <table id="cookie-monitor-table" class="table table-responsive-sm table-hover table-striped">
+                                            <thead>
+                                                <th>Action</th>
+                                                <th>Cookie</th>
+                                                <th>Path</th>
+                                                <th>Timestamp</th>
+                                            </thead>
+                                            <tbody id="cookie-monitor-table-table-body">
+                                                
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+
+                            </div>
+
                         </div>
                         <!-- tab 4 - message listener end -->
                     </div>
@@ -659,7 +745,8 @@
 
                                 <div>
                                     <div class="d-flex justify-content-between w-100">
-                                        <button class="btn btn-outline-primary w-100 me-1" value="exploitAsssitantCSRFloadForms"
+                                        <button class="btn btn-outline-primary w-100 me-1"
+                                                value="exploitAsssitantCSRFloadForms"
                                                 id="exploit-assistant-csrf-checker-load-form"> Load forms
                                         </button>
                                     </div>
@@ -671,7 +758,8 @@
                                     </div>
                                 </div>
                                 <div id="exploit-assistant-forms-container-outer-div" class="w-100">
-                                    <iframe id="exploit-assistant-csrf-checker-form-container" class="border rounded w-100"
+                                    <iframe id="exploit-assistant-csrf-checker-form-container"
+                                            class="border rounded w-100"
                                             style="min-height: 285px;">
 
                                     </iframe>
@@ -811,6 +899,8 @@
 <!-- tab specific script start -->
 <script src="assets/js/tabs/tab-1-tooling.js"></script>
 <script src="assets/js/tabs/tab-2-enum-tooling.js"></script>
+<script src="assets/js/tabs/tab-3-exploit-assistant.js"></script>
 <!-- tab specific scripts end -->
+
 </body>
 </html>
