--- a/index.html
+++ b/index.html
@@ -664,20 +664,29 @@
 
                             <div class="tab-content">
 
-                                <div class="tab-pane fade show active mt-1" id="enum-tooling-postmessage-monitor-tab" style="height: 440px"
+                                <div class="tab-pane fade show active mt-1" id="enum-tooling-postmessage-monitor-tab"
+                                     style="height: 440px"
                                      role="tabpanel">
                                     <h6>
-                                        Postmessage monitor
+                                        Postmessage monitor: <br>
+                                        <small>
+                                            <span class="postmessage-tab-url"></span>
+                                        </small>
                                     </h6>
                                     <div class="form-group d-flex justify-content-between">
-                                        <input class="form-control w-75 me-1" type="text" id="search-postmessage-input" placeholder="Search...">
-                                        <button class="refresh-control btn btn-outline-danger w-25" value="postmessage-monitor-table-table-body" data-control-refresh-active="true">Stop refresh</button>
+                                        <input class="form-control w-75 me-1" type="text" id="search-postmessage-input"
+                                               placeholder="Search...">
+                                        <button class="refresh-control btn btn-outline-danger w-25"
+                                                value="postmessage-monitor-table-table-body"
+                                                data-control-refresh-active="true">Stop refresh
+                                        </button>
                                     </div>
                                     <div>
-                                        <table id="postmessage-monitor-table" class="table table-responsive-sm table-hover table-striped">
+                                        <table id="postmessage-monitor-table"
+                                               class="table table-responsive-sm table-hover table-striped">
                                             <thead>
-                                                <th>Message</th>
-                                                <th>Timestamp</th>
+                                            <th>Message</th>
+                                            <th>Timestamp</th>
                                             </thead>
                                             <tbody id="postmessage-monitor-table-table-body">
 
@@ -690,19 +699,24 @@
                                      role="tabpanel">
                                     <h6>
                                         Cookie monitor
+                                        <br>
+                                        <small>
+                                            <span class="postmessage-tab-url"></span>
+                                        </small>
                                     </h6>
 
                                     <div style="height: 410px; overflow-y:scroll">
 
-                                        <table id="cookie-monitor-table" class="table table-responsive-sm table-hover table-striped">
+                                        <table id="cookie-monitor-table"
+                                               class="table table-responsive-sm table-hover table-striped">
                                             <thead>
-                                                <th>Action</th>
-                                                <th>Cookie</th>
-                                                <th>Path</th>
-                                                <th>Timestamp</th>
+                                            <th>Action</th>
+                                            <th>Cookie</th>
+                                            <th>Path</th>
+                                            <th>Timestamp</th>
                                             </thead>
                                             <tbody id="cookie-monitor-table-table-body">
-                                                
+
                                             </tbody>
                                         </table>
                                     </div>
