--- a/index.html
+++ b/index.html
@@ -665,12 +665,12 @@
                             <div class="tab-content">
 
                                 <div class="tab-pane fade show active mt-1" id="enum-tooling-postmessage-monitor-tab"
-                                     style="height: 440px"
+                                     style="height: 420px"
                                      role="tabpanel">
                                     <h6>
                                         Postmessage monitor: <br>
                                         <small>
-                                            <span class="postmessage-tab-url"></span>
+                                            <span class="current-tab-url"></span>
                                         </small>
                                     </h6>
                                     <div class="form-group d-flex justify-content-between">
@@ -696,17 +696,23 @@
                                 </div>
 
                                 <div class="tab-pane fade mt-1" id="enum-tooling-cookie-monitor-tab"
-                                     role="tabpanel">
+                                     style="height: 420px" role="tabpanel">
                                     <h6>
-                                        Cookie monitor
+                                        Cookie monitor:
                                         <br>
                                         <small>
-                                            <span class="postmessage-tab-url"></span>
+                                            <span class="current-tab-url"></span>
                                         </small>
                                     </h6>
-
-                                    <div style="height: 410px; overflow-y:scroll">
-
+                                    <div class="form-group d-flex justify-content-between">
+                                        <input class="form-control w-75 me-1" type="text" id="search-cookie-monitor-input"
+                                               placeholder="Search...">
+                                        <button class="refresh-control btn btn-outline-danger w-25"
+                                                value="cookie-monitor-table-table-body"
+                                                data-control-refresh-active="true">Stop refresh
+                                        </button>
+                                    </div>
+                                    <div>
                                         <table id="cookie-monitor-table"
                                                class="table table-responsive-sm table-hover table-striped">
                                             <thead>
